--- a/platformio.ini
+++ b/platformio.ini
@@ -8,10 +8,16 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:wemos_d1_mini32]
+[env:esp32-c3-mini]
 platform = espressif32
-board = wemos_d1_mini32
+board = esp32-c3-devkitm-1
+#platform = https://github.com/tasmota/platform-espressif32/releases/download/v.2.0.5/platform-espressif32-v.2.0.5.zip
+#board = esp32-c3-mini
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
 	adafruit/Adafruit NeoPixel@^1.10.4
+	homespan/HomeSpan@^1.7.0
+build_flags = 
+	-DARDUINO_USB_CDC_ON_BOOT=1 
+	-DARDUINO_USB_MODE=1
