don't wait for serial connection on startup

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,5 +19,5 @@ lib_deps =
 	adafruit/Adafruit NeoPixel@^1.10.4
 	homespan/HomeSpan@^1.7.0
 build_flags = 
-	-DARDUINO_USB_CDC_ON_BOOT=1 
 	-DARDUINO_USB_MODE=1
+	#-DARDUINO_USB_CDC_ON_BOOT=1
