--- a/platformio.ini
+++ b/platformio.ini
@@ -20,4 +20,4 @@ lib_deps =
 	homespan/HomeSpan@^1.7.0
 build_flags = 
 	-DARDUINO_USB_MODE=1
-	#-DARDUINO_USB_CDC_ON_BOOT=1
+	-DARDUINO_USB_CDC_ON_BOOT=1
